recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:6: error: not found: value lenght
  avance(lenght)
         ^Tree:8: error: not found: value step
  if (step==0){
      ^