recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
  droite(angle)
  avance(length)
  tree(steps-1,length*shrink,angle,shrink)
  gauche(angle)
  avance(lenght)
  tree(steps-1,length*shrink,angle,shrink)
  if (step==0){
    recule(length)
  }
}